# comet

./: CMakeLists.txt  main.cpp  readme.md
.github/workflows/: build-and-release.yml  build-on-push.yml
extra/: Editor.cpp  Editor.h
gui/: GuiBase.cpp  GuiBase.h  GuiEditor.cpp  GuiEditor.h  GuiEditorMenu.cpp  GuiEditorMenu.h  GuiFrame.cpp  GuiFrame.h  GuiMainMenu.cpp  GuiMainMenu.h  GuiManager.cpp  GuiManager.h  GuiTextBox.cpp  GuiTextBox.h  InputHandler.h
gui/elements/: GuiAnimationTest.cpp  GuiAnimationTest.h  GuiBase.cpp  GuiBase.h  GuiEditor.cpp  GuiEditor.h  GuiMainMenu.cpp  GuiMainMenu.h  GuiMenu.cpp  GuiMenu.h  GuiVerticalMenu.cpp  GuiVerticalMenu.h
gui/elements/components/: GuiFrame.cpp  GuiFrame.h  GuiMenu.cpp  GuiMenu.h  GuiStar.cpp  GuiStar.h  GuiVerticalMenu.cpp  GuiVerticalMenu.h  InputHandler.h
gui/elements/components/comet/: CometTrailComponent.cpp  CometTrailComponent.h  GuiComet.cpp  GuiComet.h
gui/elements/menu/: GuiStarScreen.cpp  GuiStarScreen.h  GuiVerticalMenu.cpp  GuiVerticalMenu.h
internal/: LinkedList.h  LinkedListNode.h  Options.h  OptionsManager.cpp  OptionsManager.h
